mouse movement corresponds to levers in a circle

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
 
-        <canvas id = "can" width="150" height="150">Hello</canvas>
+        <canvas id = "can" width="800" height="800"></canvas>
 
     </body>
 </html>
