implemented lock progression, and complete lockpick loop
todo: implement correct GUI elements, level display,
pin display,
timer,
level selection

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     </head>
 
     <body>
-
-        <canvas id = "can" width="800" height="800"></canvas>
+        <p>Lock level: --_insert_--</p>
+        <canvas id = "can" width="600" height="600"></canvas>
+        <ul id = "levelDisplay">
+            <li>hej</li>
+            <li>då</li>
+        </ul>
 
     </body>
 </html>
