--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </p>
         <div id = "main">
             <canvas id = "can" width="600" height="600"></canvas>
+            <p id = "timeHolder">x</span></p>
             <ul id = "levelDisplay">
             </ul>
 
