--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p id = "legend">Legend:<br> LEFT CLICK the square to begin <br> 
             LEFT CLICK to lock/unlock left lockpick <br> 
             RIGHT CLICK to lock/unlock right lockpick <br>
-            F to attempt to pick the locck <br>
+            F to attempt to pick the lock <br>
             ESCAPE to get back control of cursor <br>
             <br>
             A lockpick becomes red when it is in the correct position
